<resources>
    <string name="app_name">PregnancyTracker</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="due_date">Due date</string>
    <string name="done">Done</string>
    <string name="pregnancy_with">Pregnancy with: %1$s</string>
    <string name="due_date_with_date">Due date: %1$s</string>
    <string name="confirm_your_information">Confirm your information</string>
    <string name="add_a_new_pregnancy">Add a new pregnancy</string>
    <string name="please_confirm">Please confirm</string>
    <string name="confirm_delete_pregnancy">Are you sure you want to remove this pregnancy? All associated data will be deleted</string>
    <string name="remove_pregnancy">Remove pregnancy</string>
    <string name="view_pregnancy_details">View pregnancy details</string>
    <string name="week_1_what_to_expect">No noticeable changes yet as this week is still part of the menstrual cycle.</string>
    <string name="week_2_what_to_expect">Ovulation occurs and the body prepares for fertilization.</string>
    <string name="week_3_what_to_expect">Fertilization may happen, and the zygote begins forming.</string>
    <string name="week_4_what_to_expect">Missed menstrual period; possible mild cramping and spotting as the embryo implants.</string>
    <string name="week_5_what_to_expect">Early signs of pregnancy like nausea, fatigue, and breast tenderness may appear.</string>
    <string name="week_6_what_to_expect">Possible increase in nausea, heightened sense of smell, and frequent urination.</string>
    <string name="week_7_what_to_expect">Morning sickness may continue; the embryo is about the size of a blueberry.</string>
    <string name="week_8_what_to_expect">The embryo starts to form facial features; morning sickness and fatigue may persist.</string>
    <string name="week_9_what_to_expect">The fetus may begin to move, though it\'s too early to feel it; hormonal changes continue.</string>
    <string name="week_10_what_to_expect">The risk of miscarriage decreases; the fetus\'s critical development is underway.</string>
    <string name="week_11_what_to_expect">The fetus is almost fully formed; the partner might notice a slight growth in belly size.</string>
    <string name="week_12_what_to_expect">The risk of miscarriage drops significantly; energy levels may start to rise.</string>
    <string name="week_13_what_to_expect">The first trimester ends; some symptoms may lessen as the second trimester begins.</string>
    <string name="week_14_what_to_expect">Expect a growing appetite and possible appearance of a baby bump.</string>
    <string name="week_15_what_to_expect">Baby’s skeleton begins to ossify, and the pregnant partner may feel more energetic.</string>
    <string name="week_16_what_to_expect">The baby\'s eyes and ears are moving into place; the partner might start feeling fluttering sensations.</string>
    <string name="week_17_what_to_expect">Increased body fluids could lead to stuffiness and nosebleeds.</string>
    <string name="week_18_what_to_expect">The baby is active, and the pregnant partner may start to feel movement.</string>
    <string name="week_19_what_to_expect">Some partners start to feel Braxton Hicks contractions as the body prepares for labor.</string>
    <string name="week_20_what_to_expect">The halfway point; an ultrasound may reveal the baby’s sex.</string>
    <string name="week_21_what_to_expect">The baby\'s taste buds are developing, and movements become more noticeable.</string>
    <string name="week_22_what_to_expect">The baby is sleeping in cycles; the pregnant partner may notice swelling in the ankles and feet.</string>
    <string name="week_23_what_to_expect">The baby\'s hearing is developing, they may respond to sounds.</string>
    <string name="week_24_what_to_expect">The baby\'s lungs are developing; a glucose screening test may be scheduled to check for gestational diabetes.</string>
    <string name="week_25_what_to_expect">The baby may start to respond to familiar voices.</string>
    <string name="week_26_what_to_expect">The baby’s eyes begin to open; the pregnant partner may experience backaches and sleep disturbances.</string>
    <string name="week_27_what_to_expect">The end of the second trimester; the baby\'s brain activity is increasing.</string>
    <string name="week_28_what_to_expect">The third trimester begins; the baby continues to put on weight and grow in length.</string>
    <string name="week_29_what_to_expect">The baby\'s muscles and lungs are continuing to mature.</string>
    <string name="week_30_what_to_expect">The baby may move to a head-down position in preparation for birth.</string>
    <string name="week_31_what_to_expect">The baby\'s rapid growth continues; the partner\'s navel may protrude.</string>
    <string name="week_32_what_to_expect">The baby\'s bones are fully formed, but still soft.</string>
    <string name="week_33_what_to_expect">The baby\'s brain is developing; the pregnant partner may notice a decrease in fetal movements as the baby grows larger.</string>
    <string name="week_34_what_to_expect">The baby begins to develop their own immune system.</string>
    <string name="week_35_what_to_expect">The baby\'s kidneys are fully developed, and the liver can process some waste products.</string>
    <string name="week_36_what_to_expect">The baby gains about an ounce a day; the pregnant partner may feel more uncomfortable as the due date approaches.</string>
    <string name="week_37_what_to_expect">The baby is considered early-term; they continue to build fat layers.</string>
    <string name="week_38_what_to_expect">At week 38, the baby is considered full-term. The pregnant person might experience more Braxton Hicks contractions as the body prepares for labor.</string>
    <string name="week_39_what_to_expect">During week 39, the pregnant person might notice the baby dropping lower into the pelvis. This is called "lightening" and indicates preparation for birth.</string>
    <string name="week_40_what_to_expect">The due date arrives in week 40. If there are no signs of labor, the healthcare provider may discuss options like waiting for natural labor or scheduling an induction.</string>
    <string name="what_to_expect_week">What to expect: Week %1$s</string>
    <string name="baby_size">Baby size</string>
    <string name="current_week_date_days_left">%1$s | %2$s days in | %3$s days to go</string>
    <string name="home">Home</string>
    <string name="log">Log</string>
    <string name="camera">Camera</string>
    <string name="phone">Phone</string>
    <string name="add_log">Add log</string>
    <string name="add_log_entry">Add log entry</string>
    <string name="submit">Submit</string>
    <string name="log_entry">Log entry</string>
    <string name="attachments">Attachments</string>
    <string name="add_attachment">Add attachment</string>
    <string name="cd_add_image_attachment">Add image attachment</string>
    <string name="cd_image_attachment">Image attachment %1$s</string>
    <string name="where_add_attachment_from">Where would you like to add an attachment from?</string>
    <string name="cd_add_attachment_from_camera">Add image attachment from camera</string>
    <string name="cd_add__attachment_from_local_media">Add attachment from local media</string>
    <string name="current_week">Week %1$s</string>
    <string name="cd_delete_attachment">Delete attachment</string>
    <string name="delete_attachment">Delete attachment</string>
    <string name="delete_this_attachment">Delete this attachment?</string>
    <string name="update">Update</string>
    <string name="error_loading_log_entry">Error loading log entry</string>
    <string name="error_accessing_camera">Error accessing camera</string>
    <string name="log_last_updated">Last updated: %1$s</string>
    <string name="log_date">Date: %1$s</string>
    <string name="edit_log_entry">Edit Log Entry</string>
    <string name="ci_research_birthing_methods">Research birthing methods</string>
    <string name="ci_start_planning_nursery">Start planning nursery</string>
    <string name="ci_create_savings_plan">Create savings plan</string>
    <string name="ci_research_birthing_facilities">Research birthing facilities</string>
    <string name="ci_interview_ob_midwives">Interview ob midwives</string>
    <string name="ci_discuss_birth_announcement">Discuss birth announcement</string>
    <string name="ci_find_a_pet_sitter">Find a pet sitter</string>
    <string name="ci_learn_route_to_birth_location">Learn route to birth location</string>
    <string name="ci_clear_space_for_camera">Clear space for camera</string>
    <string name="ci_finish_nursery">Finish nursery</string>
    <string name="ci_practice_contraction_counter">Practice contraction counter</string>
    <string name="ci_prep_overnight_bag">Prep overnight bag</string>
    <string name="ci_install_car_seat">Install car seat</string>
    <string name="cl_second_trimester">Second Trimester</string>
    <string name="cl_third_trimester">Third Trimester</string>
    <string name="ci_deep_clean_home">Deep clean home</string>
    <string name="ci_prepare_take_off_work_for_birth">Prepare take off work for birth</string>
    <string name="ci_research_car_seats">Research car seats</string>
    <string name="ci_research_diaper_types">Research diaper types</string>
    <string name="ci_discuss_baby_names">Discuss baby names</string>
    <string name="ci_start_building_nursery">Start building nursery</string>
    <string name="ci_add_doctors_to_contacts">Add doctors to contacts</string>
    <string name="cl_first_trimester">First Trimester</string>
    <string name="ci_start_looking_baby_names">Start looking baby names</string>
    <string name="ci_schedule_first_sonogram">Schedule first sonogram</string>
    <string name="checklists">Checklists</string>
</resources>